htick 0.9
---------
(released on Mon May 22 14:58:56 CEST 2000)

----- cvs ci ------
Fri Jun 02 10:48:00 SAMST 2000
Georgi:
* now outgoing tics stores in ticOutbound directory
  if ticOutbound not define, then in passFileAreaDir
* fixed bug in clean - if separateBundles and busy
* now htick can remove file[s], if field replace is filemask
  Warning! Non tested

----- cvs ci ------
Thu Jun 01 15:00:00 SAMST 2000
Georgi:
* change some code in toss and hatch
  Warning! Non tested
* in hatch now work replace and ExecOnFile
* fixed bug - if noTIC and link is busy

----- cvs ci ------
Sun May 28 17:35:00 SAMST 2000
Georgi (patch from Lev Serebryakov, 2:5030/661):
* htick now creates DLC, if addDLC is set and DLCDigits is between 1 and 20.
* htick now process case of file names according to config
  (ConvertShortNames, ConvertLongNames tokens)

----- cvs ci ------
Mon May 22 14:52:27 CEST 2000
mtt:
* changed version number to 0.9

----- cvs ci ------
Wed May 17 21:40:28 NOVST 2000
max (patch from Alex Bronin):
* fix cleaning passthrough dir:
 - outgoing tics stores in passFileAreaDir
 - outgoing tics for busy links stores in busyFileDir
   (default <outbound>/busy.htk)
 - clean files in passthrough dir only if command 'htick clean' used
* fix printing link's access by areafix
* fix ExecOnFile with passthrough filearea
* added -sendorig option to filearea - send files to links from passFileAreaDir
* changed log entries from link's name to link's address

----- cvs ci ------
Sat May 13 18:11:12 NOVST 2000
max:
* fixed hatching with ticPwd==NULL

----- cvs ci ------
Fri May 13 18:09:09 MSD 2000
max (patch from Serguei Revtov):
* announce to ANY netmail area

----- cvs ci ------
Mon May  8 17:40:14 NOVST 2000
max (patch from Alex Bronin):
* MS Visual C porting

----- cvs ci ------
Mon May  1 12:40:58 NOVST 2000
max (patch from Serguei Revtov):
* "8+3 warn" fixes

----- cvs ci ------
Mon May 1 3:30:00 MSK 2000
Nestyurkin Nikolay:
* new writeLogEntry, like in hpt